--- a/knowledge_graph_v2.adoc
+++ b/knowledge_graph_v2.adoc
@@ -63,7 +63,7 @@ CREATE
 (web)-[:r]->(cloud);
 
 MATCH (n)-[:r]->(b) CREATE UNIQUE (b)-[:r]->(n);
-MATCH (n)-[:r]->() RETURN n,r;
+MATCH (n)-[rel:r]->() RETURN n,rel;
 
 ----
 
